<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    
    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover" />
    
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_add"
        android:title="@string/create" />
    
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/inbox" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
        
</menu>